kubernetes/pocket-id/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocket-id
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - name: pocket-id
        image: pocket-id
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 1411
        startupProbe:
          failureThreshold: 60
          httpGet:
            path: /
            port: 1411
            scheme: HTTP
          periodSeconds: 5
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 1411
            scheme: HTTP
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 1411
            scheme: HTTP
          periodSeconds: 30
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
        volumeMounts:
        - name: geoip
          mountPath: /geoip
          readOnly: true
      volumes:
      - name: geoip-src
        persistentVolumeClaim:
          claimName: geoip
          readOnly: true
      - name: geoip
        emptyDir: {}
