kubernetes/pocket-id/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
spec:
  ports:
  - port: 80
    targetPort: 1411
    name: http
    protocol: TCP
