kubernetes/pocket-id/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocket-id-internal
  annotations:
    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "512k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "256k"
spec:
  ingressClassName: nginx-internal
  rules:
  - host: oidc.internal.yuha0.com
    http:
      paths:
      - backend:
          service:
            name: pocket-id
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocket-id-external
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    external-dns.kubernetes.io/cloudflare-proxied: "true"
    external-dns.kubernetes.io/target: "ddns.yuha0.com"
    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "512k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "256k"
spec:
  ingressClassName: nginx-external
  rules:
  - host: oidc.yuha0.com
    http:
      paths:
      - backend:
          service:
            name: pocket-id
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - oidc.yuha0.com
    secretName: pocket-id-tls-certificate
